app_web/public/stylesheets/user.css
/* ... */
.right-border-on-element {
    -webkit-box-shadow: 2px 0 0 0 rgba(255,255,255,1);
    -moz-box-shadow: 2px 0 0 0 rgba(255,255,255,1);
    box-shadow: 2px 0 0 0 rgba(255,255,255,1);
}

.nofocus:focus {
    outline: none;
}

/**
 ** Page Manager
 **/

.page-manager {
    background-color: #2A364F;
    cursor: pointer;
}

.current-page, .arrow-toward-bottom {
    color: white;
    font-size: 20px;
}
.current-page {
    width: calc(100% - 50px);
    padding: 0 15px;
}
.arrow-toward-bottom {
    width: 50px;
    padding: 0 10px 0 14px;
}

.drop-down-menu {
    height: auto;
    width: auto;
    top: 60px;
    background-color: #2A364F;
}
.drop-down-menu-item {
    color: white;
    font-size: 20px;
    padding: 0 15px;
    min-height: 100%;
}

.item-selected {
    background-color: #202C3D;
}

/**
 ** Module contact
 **/

.contacts-icon, .arrow-toward-bottom {
    cursor: pointer;
}

.drop-down-contact {
    top: 60px;
    max-height: 770px;

    background-color: #364760;
    width: calc(33.333%);
}
.drop-down-contact:before {
    content: '';
    height: 2px;
    width: calc(100% - 102px);
    left: 102px;
    background-color: white;
    position: absolute;
}

.contacts-icon {
    color: white;
    font-size: 28px;
    width: 50px;
    padding: 0 4px 0 12px;
}

.contact-search-subelement {
    margin: 15px 15px;
    height: 100px;
}

.contact-search-header {
    height: 50px;
    line-height: 50px;
    color: white;
}

.contact-search-text {
    display: block;
    float: left;
    font-size: 25px;
}

.contact-toggle-button {
    display: block;
    position: absolute;
    right: 15px;
}

.contact-toggle-text {
    font-size: 14px;
    color: white;
}

.switch {
    position: relative;
    display: inline-block;
    width: 30px;
    height: 20px;
    top: 5px;
    margin: 0 8px;
}
.switch input {display:none;}
.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
}
.slider:before {
    position: absolute;
    content: "";
    height: 16px;
    width: 16px;
    left: 2px;
    bottom: 2px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
}
input:checked + .slider {
    background-color: #202C3D;
}
input:focus + .slider {
    box-shadow: 0 0 1px #202C3D;
}
input:checked + .slider:before {
    -webkit-transform: translateX(10px);
    -ms-transform: translateX(10px);
    transform: translateX(10px);
}
.slider.round {
    border-radius: 20px;
}
.slider.round:before {
    border-radius: 50%;
}

.contact-search-bar {
    height: 50px;
}

.search_text[type=text] {
    padding-left: 20px;
}
.search_text {
    width: calc(100% - 60px);
    padding: 15px 0 15px 20px;
    font-size: 16px;
    font-family: Montserrat, sans-serif;
    border: 0 none;
    height: inherit;
    margin-right: 0;
    color: #202C3D;
    outline: none;
    background: white;
    float: left;
    box-sizing: border-box;
    transition: all 0.15s;
}
::-webkit-input-placeholder { /* WebKit browsers */
    color: #202C3D;
}
:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
    color: #202C3D;
}
::-moz-placeholder { /* Mozilla Firefox 19+ */
    color: #202C3D;
}
:-ms-input-placeholder { /* Internet Explorer 10+ */
    color: #202C3D;
}
.search_text:focus {
    background: #f8f8f8;
}
.search_button {
    border: 0 none;
    background: #f8f8f8;
    width: 60px;
    float: left;
    padding: 0;
    text-align: center;
    height: inherit;
    cursor: pointer;
}
.search-icon {
    color: #202C3D;
    font-size: 25px;
}

.contact-list {
    max-height: 625px;
    margin: 10px 15px;
    background-color: white;
    overflow-x: hidden;
    overflow-y: auto;
}

.module-contact-contacts {
    height: 100%;
}
.module-contact-contacts-contacts {
    height: calc(100% - 48px);
}
.module-contact-contacts-blacklist {
    height: calc(100% - 48px);
}

.module-contact-all {
    height: calc(100% - 5px);
}

.no-item-contact {
    height: calc(100%);
    line-height: 1750%;
    text-align: center;
    font-size: xx-large;
}
.no-state-contact {
    background-color: rgba(27, 169, 242, 0.5);
    color: white;
}
.no-state-blacklist {
    background-color: rgba(205, 92, 92, 0.5);
    color: white;
}
.no-state-search {
    background-color: rgba(136, 136, 136, 0.5);
    color: white;
}

/**
 ** Right-Bar element
 **/

.user-basic-info {
    width: calc(100% - 60px);
}

.user-icon {
    width: 60px;
}

.circle-container {
    display: block;

    height: 50px;
    width: 50px;
    margin: 5px;

    background-color: white;

    text-align: center;
    line-height: 50px;
    font-size: 20px;
    font-weight: 600;
    color: black;

    border-radius: 50%;
}

.user-id {
    width: calc(100% - 62px);
    text-align: center;
    font-size: 20px;
    color: white;
}

.user-profile-button, .user-disconnect-button {
    cursor: pointer;
    width: 60px;
}

.gear-icon, .off-icon {
    display: block;
    color: white;
    font-size: 30px;
    padding: 15px 15px 15px 15px;
}

/* --- Left Menu related style --- */
.left-menu {
    background-color: #2F363E;
}

.item-shortcuts, .button-shortcuts {
    position: relative;
    display: block;
    color: white;
    cursor: pointer;
}
.item-shortcuts {
    height: 60px;
    line-height: 60px;
}

.item-shortcuts-selected {
    background-color: #21262C;
}

.item-shortcuts-box, .button-shortcuts-box {
    position: relative;
    margin: 0 15px;
}

.item-shortcuts-title {
    float: left;
    font-size: 20px;
    width: calc(100% - 45px);
    height: inherit;
}

.button-shortcuts-title {
    position: relative;
    float: left;
    font-size: 20px;
    width: calc(100%);
    margin: 7px 0;
    padding: 5px 10px;
    border-radius: 5px;
    background-color: #364760;
}

.button-plus-icon {
    position: absolute;
    right: 10px;
    top: 13px;

}
/* ... */

